fix (web): visual layout spacings

--- a/web/components/annual-salary-report-list.module.scss
+++ b/web/components/annual-salary-report-list.module.scss
@@ -1,4 +1,5 @@
 .list {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
